# HADES_ROS

./: README.md
NODE SOFTWARE REV4 FREEZE/HADES_BASE_STATION_ENDPOINT/: HADES_BASE_STATION_ENDPOINT.ino
NODE SOFTWARE REV4 FREEZE/HADES_COM_ENDPOINT/: HADES_COM_ENDPOINT.ino
NODE SOFTWARE REV4 FREEZE/HERMES_NODE_REV3/: HERMES_NODE_REV3.ino
NODE SOFTWARE REV4 FREEZE/ros_lib/hades_base_stn/: audio_packet.h  control_packet.h  data_packet.h  sensor_packet.h
NODE SOFTWARE REV4 FREEZE/ros_lib/hades_com_sys/: audio_packet.h  control_packet.h  data_packet.h  sensor_packet.h
NODE SOFTWARE REV4 FREEZE/ros_lib/ros/: node_handle.h
NODE SOFTWARE REV4 TESTING FREEZE/HERMES_ACCELEROMETER/: HERMES_ACCELEROMETER.ino
NODE SOFTWARE REV4 TESTING FREEZE/HERMES_LED_TEST/: HERMES_LED_TEST.ino
NODE SOFTWARE REV4 TESTING FREEZE/HERMES_NODE_MONITOR_TEST/: HERMES_NODE_MONITOR_TEST.ino
NODE SOFTWARE REV4 TESTING FREEZE/HERMES_ROS_TEST/: HERMES_ROS_TEST.ino
NODE SOFTWARE REV4 TESTING FREEZE/HERMES_TEST_RSSI_RX2/: HERMES_TEST_RSSI_RX2.ino
hades_base_stn/: CMakeLists.txt  package.xml
hades_base_stn/launch/: HADES_BASE_STATION.launch
hades_base_stn/msg/: audio_packet.msg  data_packet.msg  sensor_packet.msg
hades_base_stn/src/: BASE_OP.cpp
hades_com_sys/: CMakeLists.txt  package.xml
hades_com_sys/launch/: HADES_COM_SYS.launch  HADES_COM_SYS_TEST.launch
hades_com_sys/msg/: audio_packet.msg  control_packet.msg  sensor_packet.msg
hades_com_sys/src/: COMOP.cpp
hades_video_proc/: CMakeLists.txt  package.xml
hades_video_proc/src/: hades_video_proc.cpp
hades_video_proc_base/: CMakeLists.txt  package.xml
hades_video_proc_base/src/: hades_base_stn_proc.cpp
